some comments update and regeneration

--- a/ac.soton.xumlb.statemachine.ide/xtend-gen/ac/soton/xumlb/ide/.gitignore
+++ b/ac.soton.xumlb.statemachine.ide/xtend-gen/ac/soton/xumlb/ide/.gitignore
@@ -1,2 +1,6 @@
 /.StatemachineIdeModule.java._trace
 /.StatemachineIdeSetup.java._trace
+/.StatemachineIdeModule.xtendbin
+/.StatemachineIdeSetup.xtendbin
+/StatemachineIdeModule.java
+/StatemachineIdeSetup.java
