--- a/ac.soton.xumlb.statemachine.ui/xtend-gen/ac/soton/xumlb/ui/labeling/.gitignore
+++ b/ac.soton.xumlb.statemachine.ui/xtend-gen/ac/soton/xumlb/ui/labeling/.gitignore
@@ -1,2 +1,6 @@
 /.StatemachineDescriptionLabelProvider.java._trace
 /.StatemachineLabelProvider.java._trace
+/.StatemachineDescriptionLabelProvider.xtendbin
+/.StatemachineLabelProvider.xtendbin
+/StatemachineDescriptionLabelProvider.java
+/StatemachineLabelProvider.java
